hphp/test/slow/traits/require_constraint_iface_nonexistent.php.expectf
Fatal error: Class 'X' required to extend class 'NonExistent' by interface 'I1' in %s/test/slow/traits/require_constraint_iface_nonexistent.php on line 7